syntax = "proto3";

option go_package = "github.com/karokojnr/bookmesh-shared/api";

package api;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated BookWithQuantity books = 2;

}

message BookWithQuantity {
    string book_id = 1;
    int32 quantity = 2;
}

message Order {
    string order_id = 1;
    string customer_id = 2;
    string status = 3;
    repeated Book books = 4;

}

message Book {
    string book_id = 1;
    string title = 2;
    repeated string authors = 3;
    string price_id = 4;
    int32 quantity = 5;
    
}